# BookingAgent

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
data/: cities.db  travel_proposition.db
include/: BookingAgent.h  Graph.h  Measurement.h  TravelProposition.h  Unit.h
src/: BookingAgent.cpp  Graph.cpp  Measurement.cpp  TravelProposition.cpp  Unit.cpp  main.cpp
tests/: BookingAgentTests.cpp  GraphTests.cpp  MeasurementTests.cpp  TravelPropositionTests.cpp  UnitTests.cpp  test_cities.txt  test_travel.txt
